# widark

./: Makefile  README.md  log.txt  pyproject.toml
docs/: Makefile  conf.py  index.rst
docs/issues/: 1591866975_check_entry_component.rst  1592124855_simplify_modals_launching.rst  1592125335_support_tab_navigation.rst  1592239407_detect_shift_ctrl_alt_keys.rst  1592876137_listbox_mouse_wheel_scroll.rst  index.rst
docs/issues/closed/: 1592124855_simplify_modals_launching.rst  1592239407_detect_shift_ctrl_alt_keys.rst  1592876137_listbox_mouse_wheel_scroll.rst  index.rst
showcase/: __main__.py  content.py
tests/: test_application.py  test_palette.py
tests/widget/: __init__.py  conftest.py  test_color.py  test_event.py  test_style.py  test_widget.py
tests/widget/components/: test_button.py  test_entry.py  test_frame.py  test_label.py  test_listbox.py  test_modal.py  test_spacer.py
widark/: __init__.py  application.py  palette.py
widark/widget/: __init__.py  color.py  event.py  style.py  widget.py
widark/widget/components/: __init__.py  button.py  entry.py  frame.py  label.py  listbox.py  modal.py  spacer.py
