[tool.poetry]
name = "widark"
version = "0.3.2"
description = "Widgets for console user interfaces"
authors = ["Knowark"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-asyncio = "^0.12.0"
mypy = "^0.770"
pytest-coverage = "^0.0"
bump2version = "^1.0.0"
pylint = "^2.5.3"
rope = "^0.17.0"
sphinx = "^3.1.1"
sphinx-autobuild = "^0.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
